# finance5

./: .gitignore  Makefile  README.md  pyproject.toml
src/application/account/: errors.py
src/application/account/cqs/commands/: create.py  transfer_money.py  update.py  update_balance.py  update_currency.py
src/application/account/cqs/queries/: list.py  list_disabled.py  list_events.py  load.py  load_dst.py  load_src.py
src/application/account/cqs/schemas/: model.py
src/application/account/schemas/: model.py
src/application/account/storage/: repository.py
src/application/category/: errors.py
src/application/category/cqs/commands/: change_parent.py  create.py  update.py  update_parent.py
src/application/category/cqs/queries/: hierarchy.py  list.py  load.py
src/application/category/schemas/: model.py
src/application/category/storage/: advisory_lock.py  repository.py
src/application/transaction/cqs/commands/: create.py  delete.py  update.py
src/application/transaction/schemas/: model.py
src/application/user/schemas/: model.py
src/domain/account/: errors.py  events.py  model.py
src/domain/category/: model.py
src/domain/transaction/: model.py
src/domain/user/: model.py
src/domain/vo/: currency.py  money.py
src/infra/di/: database.py
src/infra/fastapi/: account.py  main.py  user.py
src/shared/: utils.py
src/shared/cqs/: base.py  command.py  generator.py  parser.py  query.py  schemas.py
src/shared/cqs/middlewares/: inject_entity.py  inject_session.py  parse_schema.py  pipeline.py
src/shared/cqs/query/: __init__.py  handler.py  queries.py  repository.py
src/shared/errors/: __init__.py  application.py  base.py  domain.py  model.py
src/shared/storage/: advisory_lock.py  cursor.py  filters.py  operators.py  repository.py
tests/: conftest.py  dataset.py
(+9 files in other folders)
