[project]
name = "finance5"
version = "0.1.0"
description = "Приложение для учета финансов"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.1",
    "litestar>=2.17.0",
    "pycountry>=24.6.1",
    "pydantic>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "ruff>=0.12.8",
    "sqlalchemy[asyncio]>=2.0.43",
    "uuid-utils>=0.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
fastapi = [
    "fastapi>=0.118.0",
    "sqladmin[full]>=0.21.0",
]
test = [
    "aiosqlite>=0.21.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
